--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Naimul Web Developer</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-highlight">Naimul</span> WebSite</h1>
+            <h3>World-class Profassional web Developer</h3>
+            <p>Professionally connected with the web development industry and information technology for many years. align Well-organised person, problem solver, independent employee with high attention to detail. Fan of MMA, outdoor activities, TV series and, recently, English literature. A family person, father of two fractious boys, therefore remote employment is preferred. align Interested in the entire frontend spectrum and working on ambitious projects with positive people</p>
+            <a class="text-button" target="_blank" href="http://naimulvai.xyz/">Visit My WebSite</a>
+        </div>
+        <div class="half-width">
+            <img src="images/image1.png" alt="">
+        </div>
+    </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/image2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>Become World's No. 1 Developer</h3>
+            <p>Professional free CSS templates. Stylesheet, HTML, responsive, fully customizable CSS templates with easy Drag-n-Drop Nicepage editor. Adjust colors, fonts, header and footer, layout, and other design elements, as well as content and images.</p>
+            <a class="link-button" target="_blank" href="http://naimulvai.xyz/">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="exprience-area">
+        <h2>Expriences</h2>
+        <div id="full-stack" class="half-width single-exprience">
+            <h2>Full Stack Web Dev</h2>
+            <h3 class="orange-highlight">2021 - Present | Pro level Web Dev</h3>
+            <p>Professionally connected with the web development industry and information technology for many years. align Well-organised person, problem solver, independent employee with high attention</p>
+        </div>
+        <div id="baby-web" class="half-width single-exprience">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange-highlight">2020-2021 | Programming Hero Learner</h3>
+            <p>Professionally connected with the web development industry and information technology for many years. align Well-organised person, problem solver, independent employee with high attention</p>
+        </div>
+    </section>
+    <footer>
+        <p>Naimul 2021, all rights reserved</p>
+    </footer>
+</body>
+</html>
